Change to using `defineListAllowEmpty`